src/test/deca/syntax/invalid/sansObjets/mauvaiseNotation.deca
// Description:
//    tests de programme incorrect lexicalement (mauvaise notation d'une variable)
//
// Historique:
//    @DATE@

{
    int x;
    x[5] = 9;
}